[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/buttons.gd" type="Script" id=1]
[ext_resource path="res://smaller_vibe.jpg" type="Texture" id=2]

[node name="menu" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_constants/separation = 32
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="buttons"]
margin_right = 57.0
margin_bottom = 20.0
text = "Start"

[node name="Button2" type="Button" parent="buttons"]
margin_top = 52.0
margin_right = 57.0
margin_bottom = 72.0
text = "Credits"

[node name="Button3" type="Button" parent="buttons"]
margin_top = 104.0
margin_right = 57.0
margin_bottom = 124.0
text = "Help"

[node name="Button4" type="Button" parent="buttons"]
margin_top = 156.0
margin_right = 57.0
margin_bottom = 176.0
text = "Quit"
[connection signal="pressed" from="buttons/Button" to="buttons" method="_on_Button_pressed"]
[connection signal="pressed" from="buttons/Button2" to="buttons" method="_on_Button2_pressed"]
[connection signal="pressed" from="buttons/Button3" to="buttons" method="_on_Button3_pressed"]
[connection signal="pressed" from="buttons/Button4" to="buttons" method="_on_Button4_pressed"]
